--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "led.h": "c",
         "queue.h": "c",
         "main.h": "c",
-        "sci.h": "c"
+        "sci.h": "c",
+        "interrupt.h": "c"
     }
 }
